tests/vendor/invalid/semantics/double_define.c
//tags: simple, scoping
int main() {
    {
        int a;
        int a;
    }
}